updated Keycloak to contain realm client and user for event sorcerer dashboard